PIG-1028: FINDBUGS: DM_NUMBER_CTOR: Method invokes inefficient Number constructor; use static valueOf instead (olgan)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/pig/trunk@828208 13f79535-47bb-0310-9956-ffa450edef68